fixed gap in hard fork section

--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,6 @@ main {
 }
 
 .latest-news {
-  border: 1px solid gray;
   grid-template-columns: repeat(auto-fill, minmax(16.25rem, 1fr));
   grid-template-rows: repeat(2, 16rem);
   grid-column-gap: 1rem;
@@ -272,7 +271,6 @@ main {
 }
 
 .funds-art {
-  border: 1px solid gray;
   grid-template-columns: repeat(auto-fill, minmax(16.25rem, 1fr));
   grid-template-rows: repeat(1, 18.75rem);
   grid-column-gap: 1rem;
@@ -330,6 +328,7 @@ main {
   grid-template-columns: repeat(auto-fit, minmax(18.75rem, 1fr));
   grid-template-rows: repeat(3, 31.25rem);
   grid-gap: 1rem;
+  grid-column-gap: 2.5rem;
 }
 
 .single {
@@ -387,6 +386,17 @@ main {
   list-style-type: disc;
   margin-left: 1rem;
   font-size: 0.9rem;
+  line-height: 1.5rem;
+  border-bottom: 1px solid lightgray;
+  color: #f42;
+}
+
+.list-info ul li a {
+  color: #aaa;
+}
+
+.list-info ul li a:hover {
+  color: black;
 }
 
 .footer-top {
@@ -445,3 +455,4 @@ main {
 .bottom-icons {
   padding: 1.5rem 0;
 }
+
